Cleanup user crud controller

--- a/resources/lang/ms_MY.json
+++ b/resources/lang/ms_MY.json
@@ -22,5 +22,6 @@
     "Edit": "Sunting",
     "Loading": "Menyemak",
     "Save Avatar": "Simpan",
-    "Close": "Tutup"
+    "Close": "Tutup",
+    "Account": "Akaun"
 }
