Removed unused files

--- a/lang/ms_MY.json
+++ b/lang/ms_MY.json
@@ -23,5 +23,7 @@
     "Loading": "Menyemak",
     "Save Avatar": "Simpan",
     "Close": "Tutup",
-    "Account": "Akaun"
+    "Account": "Akaun",
+    "User Management": "Pengurusan Pengguna",
+    "Administrator Settings": "Pengurusan Tetapan Sistem"
 }
